// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
     
    1
     
    הוצאה
     סך הוצאות 
    2.35 $
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
     
    23
     
    הוצאות
     סך הוצאות 
    235,123,409.87 $
  </h1>
</div>
`;
